--- a/style.css
+++ b/style.css
@@ -5,23 +5,25 @@
 
 
 *, :root {
-  margin:0;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
     
-font-family: 'Inter'; sans-serif;
+ font-family: 'Inter', sans-serif;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
--webkit-font-smoothing: antialiased; 
+ -webkit-font-smoothing: antialiased; 
  -moz-osx-font-smoothing: grayscale;
--webkit-text-size-adjust: 100%;
+ -webkit-text-size-adjust: 100%;
+
 }
+
 
 body {
   background-color:#0F172A;
 }
 
-main{
+main {
     padding: 20px;
     max-width: 640px;
     margin: 0 auto 64px;
